# eloq_waiter

./: .gitignore  .gitleaks.toml  .release-please-config.json  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  cargo-make.toml  eloqctl-test.yml  install.sh  rsync-to-remote.bash  version.sh
.githooks/: pre-push
concourse/: install.sh  install_test.sh  one-click.sh  one-click.yaml  task_build.sh  task_build.yaml  task_test.sh  task_test_tag.sh  task_test_tag.yaml
config/: cassandra.toml  common.toml
doc/: backup_and_dump_tools.md  cluster_mgr.md  cluster_mgr_rest.md  command.md  declarative_reconcile.md  devtools_cmd.md  eloqctl.md  idempotency.md  upgrade.md
docker/: Dockerfile  build-centos7.dockerfile  build-centos8.dockerfile  build-image.bash  build-rocky9.dockerfile  build-ubuntu.dockerfile  build-ubuntu18.dockerfile  build-ubuntu20.dockerfile  build-ubuntu22.dockerfile  build-ubuntu24.dockerfile  build.bash  manifest.sh  test-centos7.dockerfile  test-centos8.dockerfile  test-rocky9.dockerfile  test-ubuntu.dockerfile  test-ubuntu18.dockerfile  test-ubuntu20.dockerfile  test-ubuntu22.dockerfile  test-ubuntu24.dockerfile
scripts/: build-release-tarball.sh  install-dev.sh  install-git-hooks.sh  test-before-push.sh
src/: cmd_cli.rs  lib.rs  main.rs  term.rs
tests/: Dockerfile.runner  Dockerfile.test  README.md  basic.sh  control.sh  demo.sh  docker-compose.yml  docker_env.sh  docker_rolling_upgrade.yaml  eloqkv_rocksdb_standby_with_voter_with_log_localhost.yaml  eloqkv_rocksdb_standby_with_voter_with_log_server.yaml  entrypoint.sh  launch.sh  (+7 more)
(+293 files in other folders)
