[package]
name = "monograph_waiter"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "3", features = ["derive"] }
indicatif = "0.16"
requestty = "0.4.1"
toml = "0.5"
crossterm = "0.23"
reqwest = { version = "0.11" }
tokio = { version = "1" }
thiserror = "1"