[package]
name = "monograph_waiter"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "3", features = ["derive"] }
crossterm = "0.23"
indicatif = "0.16"
console = "0.15"
dialoguer = { version = "0.10", features = ["history", "completion", "fuzzy-select"] }

lazy_static = "1"
requestty = "0.4.1"
reqwest = { version = "0.11" }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
